# ch-diff

./: .clangd  Cargo.toml  README.md
src/: ast.rs  diff.rs  lib.rs  main.rs  print.rs
src/ast/: c_enum.rs  c_function.rs  c_opaque.rs  c_struct.rs  c_type.rs  c_union.rs  c_var.rs  mod.rs
src/diff/: buffer.rs  enums.rs  filter.rs  functions.rs  mod.rs  opaque.rs  report.rs  structs.rs  symbols.rs  unions.rs  variables.rs
src/diff/items/: enums.rs  functions.rs  mod.rs  opaque.rs  structs.rs  symbols.rs  unions.rs  variables.rs
src/generate/: mod.rs
src/hist/: classify.rs  codegen.rs  mod.rs  report.rs  version.rs
src/hist/report/: json.rs  markdown.rs
src/print/: ansi.rs  mod.rs  types.rs
tests/: tests.rs
tests/inputs/: functions.h  global_var.h  opaque.h  typedef.h  types.h
tests/inputs/diff/: structs_hard_v1.h  structs_hard_v2.h  structs_v1.h  structs_v2.h
