[package]
name = "ch-diff"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clang = { git = "https://github.com/KyleMayes/clang-rs.git", rev = "35b355e0bdfc52d37c7e93e814f54388d202dff1", version = "2.0.0", features = ["clang_10_0"]}
clap = { version = "4.5.60", features = ["derive"] }
indexmap = "2.13.0"
itertools = "0.14.0"
rustc-hash = "2.1.1"
thiserror = "2.0.18"

[dev-dependencies]
pretty_assertions = "1.4.1"
