[package]
name = "ch-diff"
version = "0.4.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
bon = "3.9.1"
clang = { git = "https://github.com/KyleMayes/clang-rs.git", rev = "35b355e0bdfc52d37c7e93e814f54388d202dff1", version = "2.0.0", features = ["clang_10_0"]}
clap = { version = "4.5.60", features = ["derive"] }
colored = "3.1.1"
derive_more = { version = "2.1.1", features = ["display", "from"] }
enum-map = "2.7.3"
env_logger = "0.11.9"
indexmap = "2.13.0"
indoc = "2.0.7"
itertools = "0.14.0"
log = "0.4.29"
regex = "1.12.3"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serial_test = "3.4.0"
similar = { version = "2.7.0", features = ["inline"] }
thiserror = "2.0.18"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.27.0"

[[bin]]
name = "ch-diff"

[[bin]]
name = "ch-hist"
